# Projet-LIFAPCD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Code.code-workspace  Makefile  TODO  cmake_install.cmake  diagram.uxf  newtest.cpp
data/maps/: dimtest.smp  test.smp  test2.smp  testmapcollisions.smp
lib/: myll.h  myptr.h  myvector.h
src/: application.h  argumentHandling.cpp  cursorHandling.cpp  eventHandling.cpp  geometry.h  globalTextures.cpp  macros.h  main.cpp  map.h  player.h  position.h  render.cpp  spawnpoint.h  tile.h  ui.cpp  ui.h  uibutton.h  uicomp.h  uitext.h  uitexture.h  update.cpp  windowInfo.h
src/app/: application.cpp  application.h
src/camera/: camera.h
src/editorinfo/: editorInfo.h
src/globalTextures/: globalTextures.cpp
src/handling/: argumentHandling.cpp  cursorHandling.cpp  eventHandling.cpp
src/map/: map.cpp  map.h  mapcomponent.h  mapinit.cpp  mapio.cpp  mapio.h  spawnpoint.h  tile.h
src/mapComponents/: spawnpoint.h
src/player/: player.cpp  player.h
src/render/: maprender.cpp  render.cpp
src/screens/: debugscreen.cpp  editor.cpp  loading.cpp  mainmenu.cpp  settings.cpp  stats.cpp  test.cpp
src/ttf/: ttf.h
src/ui/: debugscreen.cpp  editor.cpp  loading.cpp  mainmenu.cpp  settings.cpp  stats.cpp  ui.cpp  ui.h  uibutton.h  uicomp.h  uidebug.cpp  uitext.h  uitexture.h
src/update/: update.cpp
src/utils/: color.h  geometry.h  macros.h  smartptr.h  vec2.h
src/windowInfo/: windowInfo.h
